objects/ContentVersion.object
<CustomObject>
    <description>Configurations related to ACH files</description>
    <fields>
        <fullName>FileTransferStatusMessage__c</fullName>
        <description>File Transfer Status Message for moveit file upload</description>
        <encryptionScheme>None</encryptionScheme>
        <label>File Transfer Status Message</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FileTransferStatus__c</fullName>
        <description>File transfer Status to external system</description>
        <label>File transfer Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FileTransferStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__DocumentSubtype__c</fullName>
        <description>A subset category identified within a larger group of documents. A document subtype provides more specific context for the document.</description>
        <label>Document Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__DocumentSubtype</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__DocumentType__c</fullName>
        <description>List of Allowed document types in the application. Possible values are EMPLOYMENT, FINANCIALS, IDENTITY, REALESTATE, ADDRESS etc.</description>
        <label>Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__DocumentType</valueSetName>
        </valueSet>
    </fields>
</CustomObject>